# libSavitarLE

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan-package.yml  scorecard.yml  unit-test-post.yml  unit-test.yml  update-fork.yml
python/: ThreeMFParser.sip
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt
